# apiflask

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  NOTICE  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  improvement-request.md
.github/workflows/: codeql-analysis.yml  release.yml  tests.yml
apifairy/: __init__.py  core.py  decorators.py  exceptions.py
apifairy/templates/apifairy/: redoc.html  swagger_ui.html
apiflask/: __init__.py  app.py  blueprint.py  commands.py  core.py  decorators.py  errors.py  exceptions.py  fields.py  helpers.py  openapi.py  route.py  scaffold.py  schemas.py  security.py  settings.py  types.py  utils.py  validators.py
apiflask/templates/apiflask/: redoc.html  swagger_ui.html
apitoolkit/: __init__.py  core.py  decorators.py
apitoolkit/templates/apifairy/: swagger_ui.html
apitoolkit/templates/apitoolkit/: redoc.html
docs/: AGENTS.md  CLAUDE.md  alterinatives.md  api-docs.md  api.rst  apifairy_class.rst  apiflask_class.rst  apitools_class.rst  authentication.md  authors.md  changelog.md  comparison.md  conf.py  configuration.md  contributing.md  decorators.rst  docs.md  documentation.rst  error-handling.md  examples.md  index.md  index.rst  intro.rst  migrating.md  migration_guide.md  mkdocs.yml  openapi.md  request.md  response.md  schema.md  security.md  swagger.md  tips.md  usage.md
docs/_templates/: main.html
docs/api/: app.md  blueprint.md  commands.md  decorators.md  errors.md  exceptions.md  fields.md  helpers.md  openapi.md  route.md  schema_adapters.md  schemas.md  security.md  utils.md  validators.md
docs/migrations/: flask-restplus.md  flask.md
docs/schema/: index.md  marshmallow.md  pydantic.md
docs/src/: acknowledgement.md  examples.md  index.md
docs/templates/: main.html
docs/tools/: index.md
examples/: AGENTS.md  CLAUDE.md  README.md  app.py  requirements.txt  test_examples.py
examples/auth/apikey_auth/: app.py
examples/auth/basic_auth/: app.py
examples/auth/multi_auth/: app.py
examples/auth/token_auth/: app.py
examples/base_response/: app.py
examples/base_response/pydantic/: app.py
examples/basic/: app.py
examples/blueprint_tags/: app.py
examples/cbv/: app.py
examples/dataclass/: app.py
examples/file_upload/: app.py
examples/file_upload/marshmallow/: app.py
examples/file_upload/pydantic/: app.py
examples/openapi/: app.py
examples/openapi/basic/: app.py
examples/openapi/custom_decorators/: app.py
examples/openapi/static_docs/: app.py  generate_docs.sh  index.html  openapi.json
examples/openapi/static_openapi_docs/: app.py  index.html  openapi.json
examples/orm/: app.py
examples/otel/: README.md  app.py  requirements.txt
examples/pagination/: app.py
examples/pagination/pydantic/: app.py
examples/pydantic/: README.md  app.py
flask_apitools/: __init__.py  core.py  decorators.py
flask_apitools/templates/apitools/: redoc.html  swagger_ui.html
requirements/: dev.in  dev.txt  docs.in  docs.txt  examples.in  examples.txt  flask20.in  flask20.txt  min-versions.in  min-versions.txt  tests.in  tests.txt  typing.txt
src/apiflask/: AGENTS.md  CLAUDE.md  __init__.py  _decorators.py  app.py  blueprint.py  commands.py  decorators.py  exceptions.py  fields.py  helpers.py  openapi.py  openapi_adapters.py  route.py  scaffold.py  schemas.py  security.py  settings.py  types.py  ui_templates.py  validators.py  views.py
src/apiflask/schema_adapters/: __init__.py  base.py  marshmallow.py  pydantic.py  registry.py
tests/: AGENTS.md  CLAUDE.md  conftest.py  schemas.py  test_apifairy.py  test_apiflask.py  test_apitoolkit.py  test_app.py  test_async.py  test_base_response.py  test_blueprint.py  test_commands.py  test_decorator_auth_required.py  test_decorator_doc.py  test_decorator_input.py  test_decorator_output.py  test_decorators.py  test_decoupling_integration.py  test_errors.py  test_exceptions.py  test_fields.py  test_flask_apitools.py  test_helpers.py  test_openapi.py  test_openapi_adapters.py  test_openapi_basic.py  test_openapi_blueprint.py  test_openapi_extensions.py  test_openapi_headers.py  test_openapi_info.py  test_openapi_parameters.py  test_openapi_paths.py  test_openapi_security.py  test_openapi_tags.py  test_pydantic_integration.py  test_route.py  test_scaffold.py  test_schema_adapters.py  test_schemas.py  test_security.py  (+9 more)
tests/test_apps/: auto_description.py  auto_tag_description.py
tests/testapps/: disable_auto_description.py
