[metadata]
name = APIFlask
version = attr: apiflask.__version__
license = MIT
author = Grey Li
author_email = withlihui@gmail.com
description = A lightweight web API framework based on Flask and marshmallow-code projects.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
url = https://apiflask.com
project_urls =
    Documentation = https://apiflask.com/docs
    Source = https://github.com/apiflask/apiflask
    Changelog = https://apiflask.com/changelog
    Issue Tracker = https://github.com/apiflask/apiflask/issues
keywords = flask, marshmallow, openapi
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Developers
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Internet :: WWW/HTTP :: Dynamic Content
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Internet :: WWW/HTTP :: WSGI :: Application
        Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    apiflask = flask.cli:main
flask.commands =
    spec = apiflask.commands:spec_command

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
# Q0 = quotes
select = B, E, F, W, B9, ISC, Q0
# flake8-quotes
inline-quotes = single
multiline-quotes = double
docstring-quotes = double
avoid-escape = True

ignore =
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 100
per-file-ignores =
    # modules export names
    src/apiflask/__init__.py: F401
    src/apiflask/fields.py: F401
    src/apiflask/validators.py: F401
    # HTML templates
    src/apiflask/ui_templates.py: E501, B950
exclude =
    # only used when running flake8 manually
    .*
    *.txt
    *.md
    __pycache__

[mypy]
files = src/apiflask
allow_redefinition = True
warn_redundant_casts = True
warn_unused_configs = True
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_return_any = True
warn_unreachable = True
disallow_untyped_calls = True

# warn_unused_ignores = True
# disallow_incomplete_defs = True
# disallow_untyped_defs = True
# disallow_subclassing_any = True
# no_implicit_reexport = True

[mypy-flask_marshmallow.*]
ignore_missing_imports = True

[mypy-apispec.*]
ignore_missing_imports = True

[mypy-flask_httpauth.*]
ignore_missing_imports = True

[tool:pytest]
testpaths =
    tests
    examples
filterwarnings =
    ignore::UserWarning
addopts = --cov=apiflask --cov-branch --cov-report=term-missing

[coverage:run]
omit =
    src/apiflask/_decorators.py
    src/apiflask/views.py
